--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hardhat-project",
+  "scripts": {},
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
@@ -12,6 +13,9 @@
     "hardhat-contract-sizer": "^2.1.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.2"
+    "@openzeppelin/contracts": "^4.3.2",
+    "eth-sig-util": "^2.5.4",
+    "ethereumjs-util": "^7.1.3",
+    "web3": "^1.6.0"
   }
 }
